--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
 .nav-bar{
-    gap:30px;
+    gap:100px;
     display:flex;
     justify-content: space-between;
 align-items: center;
-padding:20px 0px 20px 700px;
-margin-top: -200px;
-font-size: 26px;
+padding:20px 0px 20px 500px;
+margin-top: -100px;
+font-size: 30px;
+border: 1px solid black;
+background-color: brown;
+text-decoration:black;
+
 }
- .nav-bar,a{
+header{
+   display: flex;
+   color:black;
+}
+
+a{
 text-decoration: none;
 color:black;
-
  }
  #submit{
     background-color: palevioletred;
@@ -40,22 +48,26 @@ color:black;
    text-decoration: underline;
  }
  #apple-btn{
-   height:70px;
-   width: 40%;
+   height:40px;
+   width: 20%;
    border-radius: 90px;
    background-color: black;
    color: white;
    font-size: 30px;
+   padding:50px;
+   padding-top: -200px;
 
  }
-.button,a{
+ 
+.buttons,a{
 text-decoration: underline;
 }
 .right-improve-charge{
   float:right;
-  margin-top: -700px;
+  margin-top: -400px;
   margin-right: 300px;
   font-size: 22px;
+  
 
 }
 #happy-man{
@@ -74,7 +86,9 @@ text-decoration: underline;
 }
 .westervelt-img{
    padding-left: 200px;
-   margin-top: -70px;
+   margin-top: -30px;
+   max-width:1200px ;
+   width:100%;
 }
 .uploading{
    background-color: white;
@@ -151,10 +165,8 @@ background-color: wheat;
 
 
 }
-.accounts{
+
   
-          
-}
 .know-more{
    width: 50px;
    height: 50px;
@@ -240,6 +252,11 @@ padding-left: 300px;}
 .mobile-app{
    padding:90px 1300px 50px 50px ;
 }
+.logos{
+    display:flex;
+    gap:350px;
+
+}
 
 
 a{
@@ -277,12 +294,16 @@ font-size: 30px;
 .jerson{
   margin-right: 50px; 
   margin-top: 250px;
-  /* padding-right: 100px; */
 }
 .words-clients{
    display:flex;
 
 }
+#trello{
+    height:70px;
+    width:70px;
+} 
+    
 
 
 
