--- a/style.css
+++ b/style.css
@@ -1,325 +1,661 @@
-.nav-bar{
-    gap:100px;
-    display:flex;
+.nav-bar {
+    display: flex;
     justify-content: space-between;
-align-items: center;
-padding:20px 0px 20px 500px;
-margin-top: -100px;
-font-size: 30px;
-border: 1px solid black;
-background-color: brown;
-text-decoration:black;
-
-}
-header{
-   display: flex;
-   color:black;
-}
-
-a{
-text-decoration: none;
-color:black;
+    align-items: center;
+    padding: 15px 20px;
+    background: white;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
  }
- #submit{
-    background-color: palevioletred;
-    height:40px;
-    width:9%;
-    border-radius: 15px;
+ 
+ .logo {
+    font-size: 22px;
+    font-weight: bold;
  }
- #submit-button{
+ 
+ .nav-links {
+    list-style: none;
+    display: flex;
+    gap: 60px;
+ }
+ 
+ .nav-links li a {
+    text-decoration: none;
+    color: black;
+ }
+ 
+ .nav-buttons a {
+    text-decoration: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+ }
+ 
+ .login {
+    color: black;
+ }
+ 
+ .signup {
+    background: #ff4d6d;
+    color: white;
+ }
+ .buttons{
+    display: flex;
+    gap: 30px;
     border: none;
-    height:40px;
-    width:9%;
-
- }
- .days-number,h3{
-   padding-left: 200px;
- }
- .improve.charge{
-   display: flex;
-
-
- }
- .buttons-improve-charge{
-   padding-top: 150px;}
- 
- .left-improve-charge{
-   font-size: 36px;
-   padding: 100px 1000px 100px 100px;
-  
-
- }
- #charge{
-   color: red;
-   text-decoration: underline;
- }
- #apple-btn{
-   height:40px;
-   width: 20%;
-   border-radius: 90px;
-   background-color: black;
-   color: white;
-   font-size: 30px;
-   padding:50px;
-   padding-top: -200px;
-
  }
  
-.buttons,a{
-text-decoration: underline;
-}
-.right-improve-charge{
-  float:right;
-  margin-top: -800px;
-  margin-right: 200px;
-  font-size: 22px;
-  
+ .play-page-button{
+    height: 45px;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 10px;
+ 
+ }
+ .logo{
+    display: flex;
+    gap:70px;
 
-}
-
-.techinical,h2{
-padding: 50px;
-}
-#happy-man{
-   height: 50px;
-   width:50px;
-  
-
-}
-#need-amount-p{
-   padding-left: 90px;
-   margin-top: -10px;
-   background-color: aqua;
-}
-.days-number{
-   padding-left: 300px;
-   margin-top: -120px;
-}
-.westervelt-img{
-   padding-left: 200px;
-   margin-top: -30px;
-   max-width:1200px ;
-   width:100%;
-  padding:20px 0px 20px 200px;
-}
-.uploading{
-   background-color: white;
-   margin-top: -40px;
-   padding-left: 50px;
-}
-.software-growth,h2{
-text-align: center;
-padding-top:100px;
-font-size: 30px;
-}
-.fa-solid.fa-star{
-   color: white;
-   background-color: burlywood;
-}
-.easy-interface{
-   border:1px solid red;
-   padding: 50px;
-
-}
-
-
-.products{
-   display: flex;
-   margin-left: 300px;
-   gap:100px;
-}
-.product-worked-on{
-  padding: 100px ;
-background-color: wheat;
-}
-.product-worked-on h1{
-   padding-left: 600px;
-   margin-top: -70px;
-   font-size: 40px;
-}
-#product{
-   color: red;
-   text-decoration: underline;
-}
-.techinical{
-   padding-top: -20px;
-}
-.numbers-users{
-   padding:100px 1000px 100px 100px;
-   font-size: 30px;
-
-}
-#diti.io{
-   color: red;
-   text-decoration: underline;
-}
-.download-users,.group-subscribers{
-   display:flex;
-   gap:100px;
-}
-.fa-solid.fa-anchor{
-   background-color: blue;
-}
-#join{
-   background-color:palevioletred;
-   height:50px;
-   width: 30%;
-   border-radius: 90px;
-   
-} 
-.know-more{
-   width: 50px;
-   height: 50px;
-   color:rgb(19, 20, 41);
-}
-.clients{
-   border: 1px solid pink;
-   padding:50px;
-   margin:50px;
-   height:540px
-
-}
-#words{
-    color: red;
-    text-decoration: underline;
-}
-#clients-words{
-    padding-top: 150px;
-    padding-left: 700px;
-    font-size: 36px;
-}
-
-.fa-solid.fa-mobile{
-   color:red;
-   
-  
-}
-.settings{
-padding-left: 700px;
-margin-top: -400px;
-padding-bottom: 100px;
-
-
-}
-.tim-david,p{
-    padding-left: 200px;
-    margin-top: -40px;
-}
-.settings-language{
-padding-top: 50px;
-}
-.help-customers{
-   font-size: 30px;
-  display:flex;
-}
-.fa-solid.fa-face-smile{
-    color:red;
-}
-.social-boosting{
-    float:right;
-    margin-top: -400px;
-    padding: 40px;
-    font-size: 25px;
-
-}
-#edwin-img{
-    padding-top: 70px;
-}
-
-
-#help-customers-p{
-color: red;
-text-decoration: underline;
-
-
-}
-.help-customers-h1{
-padding-left: 300px;}
-.fa-solid.fa-star{
-   background-color: white
-}
-.product-offered{
-   display: flex;
-   gap:100px;
-   background-color: rgb(28, 28, 46);
-   color: white;
-}
-.icons{
-   color:white;
-   gap:100px;
-   padding:100px;
-}
-.mobile-app{
-   padding:90px 1300px 50px 50px ;
-}
-.software-growth{
-   padding:50px;
-}
-.logos{
-    display:flex;
-    gap:350px;
-    padding:50px;
-
-}
-a{
-   display:block;
-   text-decoration: none;
-   font-size: 20px;
-   color: white;
-   margin-bottom: 50px;
-}
-.footer{
-   display: flex;
-   gap:250px;
-   background-color: black;
-   color: white;
-   height: 80px;
-   padding-top:50px;
-
-}
-.buttons-users{
-  padding: 50px; 
-}
-.download{
-display:flex;
-gap:400px;
-padding: 90px;
-font-size: 30px;
-
-
-}
-.download-app{
-   padding-left: 100px;
-}
-#apple-button{
-   height:70px;
-   width: 40%;
-   border-radius: 90px;
-   background-color: black;
-   color: white;
-   font-size: 30px;
-}
-.jerson{
-  margin-right: 50px; 
-  margin-top: 250px;
-}
-.words-clients{
-   display:flex;
-
-}
-#trello{
+ }
+ #trello{
     height:70px;
-    width:70px;
-} 
-
-
+    width: 70px;
+ }
+ .apple-page-button{
+    height: 45px;
+    background-color: rgb(52, 61, 80);
+    color: white;
+    border: none;
+    font-size: 20px;
+    padding: 10px;
+    gap: 5px;
+    border-radius: 10px;
+ }
+ .page-contacts{
+    font-weight: bolder;
+ }
+ 
+ .microsoft-logo{
+    width: 20px;
+ }
+ .microsoft-company{
+    display: flex;
+    gap: 10px;
+ }
+ .trello-logo{
+    width: 20px;
+ }
+ .trello-company{
+    display: flex;
+    gap: 10px
+ }
+ .google-logo{
+    margin-top: 60px;
+ 
+ }
+ .dropbox-logo{
+    width: 20px;
+ }
+ .dropbox-company{
+    display: flex;
+ }
+ .slack-logo{
+    width: 20px;
+ 
+ }
+ .slack-company{
+    display: flex;
+ }
+ .companies{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+ }
+ .image-content {
+    background: white;
+    padding: 20px;
+    width: 30%;
+    height: 40vh;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+ }
+ 
+ 
+ .profile-card {
+    width: 100%;
+    text-align: left;
+    justify-content: center;
+    margin-left: 80px
+ }
+ 
+ .user-info {
+    display: flex;
+    gap: 10px;
+    color: #000000;
+ 
+ }
+ 
+ .user-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+ 
+ }
+ 
+ .name {
+    font-weight: bold;
+    display: inline;
+ 
+ }
+ 
+ .title {
+    font-size: 18px;
+    color: gray;
+ }
+ 
+ .company {
+    font-weight: bold;
+    color: black;
+ }
+ 
+ .stats {
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: bold;
+ }
+ 
+ 
+ .salary p {
+    margin: 5px 0;
+    font-size: 28px;
+ }
+ 
+ .salary span {
+    font-size: 20px;
+    color: gray;
+ }
+ 
+ 
+ .progress {
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: bold;
+ }
+ 
+ .progress_bar {
+    width: 80%;
+    background: #ddd;
+    height: 6px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin-top: 5px;
+ }
+ 
+ .progress_fill {
+    height: 100%;
+    background: blue;
+    width: 73%;
+ }
+ 
+ .charge {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+ }
+ .partners{
+    text-align: center;
+    font-weight: bold;
+ }
+ .partners-paragraph{
+    font-size: 36px;
+    color: rgb(77, 75, 75);
+   margin-left: 600px;
+   margin-top: 100px;
+ }
+ .partners-num{
+    font-size: 37px;
+    color: black;
+    text-align: center;
+ }
+ .features {
+    text-align: center;
+    padding: 40px 20px;
+    background: #eef3fc;
+ }
+ 
+ .feature-cards {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+ }
+ 
+ .card {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    height: 250px;
+ }
+ #security-icon{
+    padding: 20px;
+    background-color: rgb(141, 250, 223);
+    color: black;
+    font-size: 20px;
+    border-radius: 60px;
+    margin-top: 50px;
+ }
+ #drop-icon{
+    padding: 20px;
+    background-color:white;
+    color: black;
+    font-size: 20px; 
+    margin-top: 50px;
+ }
+ #star-icon{
+    color: rgb(0, 0, 0);
+    padding: 20px;
+    background-color: rgb(240, 208, 238);
+    border-radius: 60px;
+    font-size: 20px;
+    margin-top: 50px;
+ }
+ 
+ .container {
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    gap: 300px;
+ }
+ 
+ .left-section {
+    padding: 50px;
+    width: 100%;
+ }
+ 
+ .left-section h1 {
+    font-size: 2.5em;
+    color: #e74c3c;
+    text-decoration: underline;
+    margin-bottom: 20px;
+    width: 40%;
+ }
+ 
+ .left-section p {
+    color: #000000;
+    line-height: 1.6;
+    font-size: 20px;
+    margin-bottom: 30px;
+ }
+ 
+ .number-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+ }
+ 
+ .number-item {
+    flex:40%;
+ }
+ 
+ .number-item h2 {
+    font-size: 2.5em;
+    color: #222;
+    margin-bottom: 5px;
+ }
+ 
+ .number-item p {
+    color: #000000;
+    font-size: 1.0em;
+ }
+ 
+ .right-account-section {
+    background-color: #f5f5f5;
+    padding: 50px;
+    display: flex;
+    width: 80%;
+    flex-direction: column; 
+ 
+ }
+ 
+ .card {
+    background-color: rgba(255, 255, 255, .1);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+ }
+ 
+ .card h3 {
+    color: #333;
+    margin-bottom: 10px;
+ }
+ 
+ .card p {
+    color: #000000;
+    font-size: 1em;
+    margin-bottom: 15px;
+    width: 100%;
+ 
+ }
+ 
+ .card button {
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+ }
+ .card.study button {
+    background-color: #e74c3c;
+ }
+ 
+ @media (max-width: 768px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+ 
+    .left-section,
+    .right-section {
+        padding: 30px;
+    }
+ 
+    .left-section h1 {
+        font-size: 2em;
+    }
+ 
+    .numbers-section {
+        gap: 20px;
+    }
+ 
+    .number-item {
+        flex: 1 1 100%;
+    }
+ }
+ .app-interface {
+    display: flex;
+    align-items: center;
+    gap: 100px;
+    padding: 50px;
+    background: #fdf5f5;
+ }
+ 
+ .content {
+    max-width: 50%;
+ }
+ 
+ h2 {
+    font-size: 24px;
+    font-weight: bold;
+ }
+ 
+ p {
+    font-size: 16px;
+    color: #555;
+    width:40%;
+ }
+ 
+ .btn {
+    display: inline-block;
+    padding: 10px 15px;
+    margin-top: 15px;
+    border-radius: 8px;
+    text-decoration: none;
+    border: none;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: rgb(60, 63, 83);
+    color: white;
+ }
+ 
+ .btn.dark {
+    background: black;
+    color: white;
+ }
+ 
+ .btn.light {
+    background: white;
+    border: 1px solid #ccc;
+    color: black;
+ }
+ 
+ .images img {
+    width: 350px;
+    margin: 10px;
+ }
+ .app-interface-header{
+    text-align: center;
+    font-size: 50px;
+ }
+ 
+ .clients {
+    text-align: center;
+    padding: 50px;
+ 
+ 
+ }
+ .highlight-header{
+    font-size: 50px;
+ }
+ .highlight {
+    color: red;
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 50px;
+ }
+ .text-header{
+    font-size: 50px;
+ }
+ .testimonial-container {
+    display: flex;
+ 
+    gap: 50px;
+    width: 100%;
+    height: 600px;
+ }
+ 
+ .client {
+    background: rgb(240, 238, 238);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border: pink 2px solid;
+ 
+ }
+ 
+ .profile-pic {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin-top: 10px;
+ 
+ }
+ 
+ .names {
+    font-weight: bold;
+    margin-top: 10px;
+    font-size: 30px;
+ }
+ 
+ .role {
+    font-size: 14px;
+    color: gray;
+    margin-left: 200px;
+    font-size: 20px;
+ }
+ 
+ .review {
+    font-size: 25px;
+    margin-top: 10px;
+    margin-left: 100px;
+    width: 80%;
+    text-align: left;
+ }
+ 
+ .rating {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-right: 100px;
+ }
+ footer {
+    background: #1c2947;
+    color: #ffffff;
+    padding: 40px 20px;
+    font-family: Arial, sans-serif;
+ }
+ 
+ 
+ .footer-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    max-width: 1100px;
+    margin: 0 auto;
+ }
+ 
+ 
+ .footer-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+ }
+ 
+ .footer-logo p{
+    color: white;
+    font-weight: bold;
     
-
-
-
-   
-
-  
-
-
-
+ }
+ 
+ .social-icons {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+ }
+ 
+ 
+ 
+ 
+ .footer-links {
+    display: flex;
+    gap: 40px;
+ }
+ 
+ .footer-links h4 {
+    font-size: 16px;
+    margin-bottom: 10px;
+ }
+ 
+ .footer-links ul {
+    list-style: none;
+    padding: 0;
+ }
+ 
+ .footer-links li {
+    margin-bottom: 8px;
+ }
+ 
+ .footer-links a {
+    color: #cccccc;
+    text-decoration: none;
+    font-size: 14px;
+ }
+ 
+ .footer-links a:hover {
+    color: #ffffff;
+ }
+ 
+ 
+ .footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #333;
+    padding-top: 15px;
+    margin-top: 20px;
+    font-size: 14px;
+    height: 100px;
+    color: white;
+ 
+ }
+ 
+ .footer-bottom a {
+    color: #ffffff;
+    text-decoration: none;
+ }
+ .footer-bottom p{
+    color: white;
+ }
+ 
+ .footer-bottom a:hover {
+    text-decoration: underline;
+ }
+ .diti-logos{
+    padding: 10px;
+    background-color: purple;
+    border-radius: 10px;
+    color: white;
+    font-weight: bolder;
+ }
+ .app-download {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+ }
+ .landing-page{
+    background-color: rgb(224, 240, 245);
+    width: 100%;
+    height: 100vh;
+ }
+ .text-context-paragraph{
+    font-size: 30px;
+ }
+ .contact{
+    margin-top: 50px;
+    font-size: 20px;
+ }
+ .shocked-man{
+    margin-left: 240px;
+    width: 250px;
+    border-radius: 40px;
+ 
+ 
+ 
+ }
+ .img-notification{
+    background-color: white;
+    padding: 10px;
+    width: 350px;
+    height: 90px;
+    border: 2px solid gray;
+    border-radius: 20px;
+    margin-top: -50px;
+ 
+ }
+ .company-name p{
+    font-size: 50px;
+ }
+ .microsoft-logo, .trello-logo, .dropbox-logo, .slack-logo, .google-logo{
+    width: 100px;
+ }
+ .features-header{
+    font-size: 50px;
+ }
+ .red-text{
+    color: #e74c3c;
+    font-size: 50px;
+ }
+ 
+ .content h2{
+    font-size: 60px;
+ }
+ .content p{
+    font-size: 25px;
+ }
+ .download-values{
+    background-color: #edf0f8;
+ 
+ }
