--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
  }
  .logo{
     display: flex;
-    gap:70px;
+    gap:500px;
 
  }
  #trello{
@@ -73,37 +73,6 @@
     font-weight: bolder;
  }
  
- .microsoft-logo{
-    width: 20px;
- }
- .microsoft-company{
-    display: flex;
-    gap: 10px;
- }
- .trello-logo{
-    width: 20px;
- }
- .trello-company{
-    display: flex;
-    gap: 10px
- }
- .google-logo{
-    margin-top: 60px;
- 
- }
- .dropbox-logo{
-    width: 20px;
- }
- .dropbox-company{
-    display: flex;
- }
- .slack-logo{
-    width: 20px;
- 
- }
- .slack-company{
-    display: flex;
- }
  .companies{
     display: flex;
     justify-content: space-between;
@@ -179,6 +148,9 @@
     font-size: 14px;
     font-weight: bold;
  }
+ .app-interface{
+   padding-top:-500px;
+ }
  
  .progress_bar {
     width: 80%;
@@ -228,7 +200,7 @@
     gap: 20px;
  }
  
- .card {
+ .interface {
     background: white;
     padding: 20px;
     border-radius: 8px;
@@ -258,6 +230,9 @@
     font-size: 20px;
     margin-top: 50px;
  }
+ .images{
+   margin-top:-300px ;
+   margin-left:500px;}
  
  .container {
     width: 100%;
@@ -276,14 +251,15 @@
  
  .left-section h1 {
     font-size: 2.5em;
-    color: #e74c3c;
-    text-decoration: underline;
     margin-bottom: 20px;
     width: 40%;
  }
+ .left-section-p{
+color:red ;
+text-decoration: underline; }
  
  .left-section p {
-    color: #000000;
+    color: black;
     line-height: 1.6;
     font-size: 20px;
     margin-bottom: 30px;
@@ -306,7 +282,7 @@
  }
  
  .number-item p {
-    color: #000000;
+    color: black;
     font-size: 1.0em;
  }
  
@@ -316,10 +292,12 @@
     display: flex;
     width: 80%;
     flex-direction: column; 
+    margin-bottom:100px;
+    margin-top: 200px;
  
  }
  
- .card {
+ .interface{
     background-color: rgba(255, 255, 255, .1);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -327,20 +305,20 @@
     margin-bottom: 20px;
  }
  
- .card h3 {
+ .interface h3 {
     color: #333;
     margin-bottom: 10px;
  }
  
- .card p {
-    color: #000000;
+ .interface p {
+    color:black;
     font-size: 1em;
     margin-bottom: 15px;
     width: 100%;
  
  }
  
- .card button {
+ .interface button {
     background-color: #3498db;
     color: #fff;
     border: none;
@@ -348,8 +326,8 @@
     border-radius: 5px;
     cursor: pointer;
  }
- .card.study button {
-    background-color: #e74c3c;
+ .app-interface-header.study button {
+    background-color:red;
  }
  
  @media (max-width: 768px) {
@@ -371,7 +349,7 @@
     }
  
     .number-item {
-        flex: 1 1 100%;
+        flex:100%;
     }
  }
  .app-interface {
@@ -462,7 +440,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    border: pink 2px solid;
+    border: pink 1px solid;
  
  }
  
@@ -565,7 +543,7 @@
  }
  
  .footer-links a:hover {
-    color: #ffffff;
+    color: white;
  }
  
  
@@ -578,6 +556,7 @@
     font-size: 14px;
     height: 100px;
     color: white;
+    gap:100px;
  
  }
  
@@ -603,9 +582,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px;
+  
+    
  }
- .landing-page{
+ .-page{
     background-color: rgb(224, 240, 245);
     width: 100%;
     height: 100vh;
@@ -617,15 +597,15 @@
     margin-top: 50px;
     font-size: 20px;
  }
- .shocked-man{
+ .client-man{
     margin-left: 240px;
     width: 250px;
     border-radius: 40px;
- 
- 
- 
  }
- .img-notification{
+ #downloadings{
+   padding-left: 300px;
+ }
+ .img-note{
     background-color: white;
     padding: 10px;
     width: 350px;
@@ -657,5 +637,14 @@
  }
  .download-values{
     background-color: #edf0f8;
+    margin-right: 300px;
  
+ }
+ #microsoft,#google-logo,#dropbox{
+   width:48ew;
+    height:48ew;
+ }
+ #slack-logo{
+   width:80ew; 
+   height:80ew;
  }
