--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-.nav-bar {
+ .nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 20px;
     background: white;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+ }
+ 
+ body{
+    /* overflow-x: hidden;  */
+ }
+ .page{
+   max-width: 100%;
+   height: auto;
  }
  
  .logo {
@@ -82,9 +90,23 @@
     background: white;
     padding: 20px;
     width: 30%;
-    height: 40vh;
+    height: 68vh;
     border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px;
+    margin-right: 200px;
+    margin-top: 100px;
+    /* border: 4px solid black; */
+    transform: rotate(-6deg);
+    background-color: rgb(221, 252, 244);
+  
+ }
+ .roger{
+   margin-top: 5em;
+   margin-left: -15em;
+ }
+ .user-info-p{
+margin-left: 50px;
+margin-top: -10px;
  }
  
  
@@ -128,7 +150,8 @@
  .stats {
     margin: 10px 0;
     font-size: 18px;
-    font-weight: bold;
+    padding-left: 250px;
+    margin-top: -120px;
  }
  
  
@@ -144,9 +167,10 @@
  
  
  .progress {
-    margin-top: 10px;
+    /* margin-top: 150px; */
     font-size: 14px;
     font-weight: bold;
+
  }
  .app-interface{
    padding-top:-500px;
@@ -157,25 +181,29 @@
     background: #ddd;
     height: 6px;
     border-radius: 5px;
-    overflow: hidden;
-    margin-top: 5px;
- }
+     margin-top: 5px;
+   }
  
  .progress_fill {
-    height: 100%;
-    background: blue;
-    width: 73%;
+height:50px;
+width:50px ;
+border-radius:100% ;
+border:5px solid blue;
+margin-right:100px ;
  }
  
  .charge {
+   width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px;
+    padding:0px 100px  0px 00px;
+  
  }
  .partners{
     text-align: center;
     font-weight: bold;
+    margin-top: 400px;
  }
  .partners-paragraph{
     font-size: 36px;
@@ -328,29 +356,6 @@ text-decoration: underline; }
  }
  .app-interface-header.study button {
     background-color:red;
- }
- 
- @media (max-width: 768px) {
-    .container {
-        grid-template-columns: 1fr;
-    }
- 
-    .left-section,
-    .right-section {
-        padding: 30px;
-    }
- 
-    .left-section h1 {
-        font-size: 2em;
-    }
- 
-    .numbers-section {
-        gap: 20px;
-    }
- 
-    .number-item {
-        flex:100%;
-    }
  }
  .app-interface {
     display: flex;
@@ -639,8 +644,9 @@ text-decoration: underline; }
  .download-values{
     background-color: #edf0f8;
     margin-right: 300px;
- 
- }
+ padding: 50px;
+
+ } 
  #microsoft,#google-logo,#dropbox{
    width:48ew;
     height:48ew;
@@ -648,4 +654,75 @@ text-decoration: underline; }
  #slack-logo{
    width:80ew; 
    height:80ew;
+ } 
+ @media screen  and (max-width:844px){
+body{
+   overflow: hidden;
+}
+ .page{
+   width:100%;
+   height:auto;
+ 
+ }
+ .charge{
+   width: 100%;
+   display: block;
+   padding:70px
+  
+
+ }
+ .image content{
+   width:450%;
+ 
+
+ }
+ .user-info{
+   margin-left: 100px;
+ }
+ #user-info-p{
+display: inline-flex;
+   width: 100%;
+ }
+ .lorem{
+  width: 200%;
+ }
+ #container-h1{
+   
+ }
+ #left-section-p{
+
+ }
+
+ .content-p{
+   width: 190%;
+
+ }
+ .clients{
+   background: rgb(240, 238, 238);
+    padding: 0px;
+    border-radius: 10px;
+   
+ }
+ .client-jerson{
+margin-right: 2000px;
+ }
+.app-download{
+margin-left: -23rem;
+padding: 40px;
+
+}
+.download-values{
+   margin-bottom:-1000px ;
+   margin-left: -400px;
+   padding: 20px;
+}
+.footer-container{
+   /* padding-top: 400px; */
+  
+}
+footer {
+   background-color: #471c1c;
+   margin-top: 500px;
+}
+
  }
